# char_lm

./: README.rst  setup.cfg
char_lm/: dataset.py  main.py  model.py
data/: ggm0001.ggm001.1st1K-grc1.txt  stoa0033a.tlg028.1st1K-grc1.txt  stoa0033a.tlg043.1st1K-grc1.txt  stoa0121.stoa001.opp-grc1.txt  test.txt  tlg0015.tlg001.opp-grc1.txt  tlg0018.tlg001.opp-grc1.txt  tlg0018.tlg002.opp-grc1.txt  tlg0018.tlg004.opp-grc1.txt  tlg0018.tlg005.opp-grc1.txt  tlg0018.tlg006.opp-grc1.txt  tlg0018.tlg007.opp-grc1.txt  tlg0018.tlg008.opp-grc1.txt  tlg0018.tlg010.opp-grc1.txt  tlg0018.tlg013.opp-grc1.txt  tlg0018.tlg015.opp-grc1.txt  tlg0018.tlg018.opp-grc1.txt  tlg0018.tlg019.opp-grc1.txt  tlg0018.tlg020.opp-grc1.txt  tlg0018.tlg023.opp-grc1.txt  tlg0018.tlg024.opp-grc1.txt  tlg0018.tlg026.opp-grc1.txt  tlg0018.tlg029.opp-grc1.txt  tlg0031.tlg002.INTF-grc1.txt  tlg0057.tlg001.1st1K-grc1.txt  tlg0057.tlg001.1st1K-grc2.txt  tlg0057.tlg002.1st1K-grc1.txt  tlg0057.tlg004.1st1K-grc1.txt  tlg0057.tlg006.1st1K-grc1.txt  tlg0057.tlg007.1st1K-grc1.txt  tlg0057.tlg009.1st1K-grc1.txt  tlg0057.tlg017.1st1K-grc1.txt  tlg0057.tlg018.1st1K-grc1.txt  tlg0057.tlg019.opp-grc1.txt  tlg0057.tlg022.1st1K-grc1.txt  tlg0057.tlg025.1st1K-grc1.txt  tlg0057.tlg029.1st1K-grc1.txt  tlg0057.tlg031.1st1K-grc1.txt  tlg0057.tlg032.1st1K-grc1.txt  tlg0057.tlg035.1st1K-grc2.txt  (+407 more)
test/: tlg0018.tlg011.opp-grc1.txt  tlg0018.tlg025.opp-grc1.txt  tlg0057.tlg010.1st1K-grc1.txt  tlg0057.tlg024.1st1K-grc1.txt  tlg0057.tlg061.1st1K-grc1.txt  tlg0057.tlg087.1st1K-grc1.txt  tlg0057.tlg102.1st1K-grc1.txt  (+40 more)
(+419 files in other folders)
