[metadata]
name = char_lm
author = Benjamin Kiessling
author-email = mittagessen@l.unchti.me
summary = character based language modelling for OCR postcorrection
description-file = README.rst
license = Apache
classifier =
    Development Status :: 1 - Alpha
        Environment :: Console
        Intended Audience :: Science/Research
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6


keywords =
    language modelling

[bdist_wheel]
universal = 1

[files]
packages = seg

[entry_points]
console_scripts =
    char_lm = char_lm.main:cli

